# Agent-Village

./: .env.example  .gitignore  Achieve.md  README.md  Real-World-Usecases.md  alembic.ini  pyproject.toml  test_agent_lifecycle.py  test_agent_persistence.py  test_e2e_phase2.py  test_usecase_code_generation.py  test_usecase_market_research.py  test_usecase_system_improvement.py  usecase1_results.json  usecase2_results.json  usecase3_results.json
alembic/: env.py
alembic/versions/: 20241227_000001_initial_schema.py
docker/: Dockerfile  docker-compose.yml
k8s/base/: configmap.yaml  deployment.yaml  namespace.yaml  secrets.yaml  service.yaml
src/: __init__.py
src/agents/: __init__.py  base.py  critic.py  evolver.py  planner.py  swarm.py  tool_agent.py
src/api/: __init__.py  log_streaming.py  main.py  memory_routes.py  monitoring.py  websocket.py
src/cli/: __init__.py  main.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  agent_manager.py  fsm.py  governor.py  message.py  registry.py  safety.py
src/memory/: __init__.py  base.py  embeddings.py  episodic.py  procedural.py  semantic.py  strategic.py  vector_store.py
src/notifications/: __init__.py  middleware.py  models.py  service.py
src/notifications/providers/: __init__.py  base.py  email.py  inapp.py  push.py  sms.py
src/persistence/: __init__.py  database.py  models.py  repositories.py
src/providers/: __init__.py  anthropic.py  base.py  ollama.py  openai.py
src/scheduler/: __init__.py  cron.py  middleware.py  models.py  service.py
src/tools/: __init__.py  file.py  registry.py  sandbox.py  web.py
src/webhooks/: __init__.py  middleware.py  models.py  service.py
src/workers/: __init__.py  celery_app.py  tasks.py
tests/: __init__.py  conftest.py  test_agents.py  test_api_features.py  test_fsm.py  test_memory.py  test_message.py  test_notifications.py  test_persistence.py  test_registry.py  test_safety.py  test_scheduler.py  test_tools.py  test_webhooks.py  test_websocket.py
