[project]
name = "agent-village"
version = "0.1.16"
description = "Production-grade multi-agent system with governed orchestration"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Agent Village Team"}
]
keywords = ["agents", "llm", "multi-agent", "orchestration", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core async
    "asyncio-atexit>=1.0.1",
    "uvloop>=0.19.0; sys_platform != 'win32'",

    # LLM Providers
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "httpx>=0.27.0",

    # API Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-multipart>=0.0.9",  # For form data (SSO SAML)

    # CLI
    "typer>=0.13.0",
    "rich>=13.9.0",

    # Memory & Storage
    "qdrant-client>=1.12.0",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "redis>=5.2.0",
    "alembic>=1.14.0",

    # Task Queue
    "celery[redis]>=5.4.0",

    # Utilities
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "python-ulid>=3.0.0",
    "orjson>=3.10.0",

    # Observability
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "prometheus-client>=0.21.0",

    # Token counting
    "tiktoken>=0.8.0",

    # System metrics
    "psutil>=6.0.0",

    # HTTP client for webhooks
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.13.0",
    "ruff>=0.7.0",
    "pre-commit>=4.0.0",
]

[project.scripts]
village = "src.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
